# internal/dao/model/admin/admin_role.go
@@ -2,10 +2,12 @@ package admin
 
 import (
 	"context"
+	"github.com/jinzhu/copier"
 	"github.com/zeromicro/go-zero/core/logc"
-	"go-api/internal/dao/dto"
 	"go-api/internal/dao/model"
+	"go-api/internal/dao/schema"
 	"go-api/internal/svc"
+	"go-api/internal/types"
 	"gorm.io/gorm"
 )
 
@@ -29,11 +31,11 @@ func NewAdminRoleModel(ctx context.Context, svcCtx *svc.ServiceContext) *AdminRo
 	}
 }
 
-func (model *AdminRoleModel) getAdminRoleMenuByCache(roleId int64) (res map[int64]*dto.MenuTree, err error) {
+func (model *AdminRoleModel) getAdminRoleMenuByCache(roleId int64) (res []*types.LoginRoleMenuItem, err error) {
 	return
 }
 
-func (model *AdminRoleModel) setAdminRoleMenuByCache(roleId int64, data map[int64]*dto.MenuTree) {
+func (model *AdminRoleModel) setAdminRoleMenuByCache(roleId int64, data []*types.LoginRoleMenuItem) {
 	return
 }
 
@@ -41,7 +43,7 @@ func (model *AdminRoleModel) DeleteAdminRoleMenuByCache(roleId int64) {
 	return
 }
 
-func (model *AdminRoleModel) GetAdminRoleMenu(roleId int64) (res map[int64]*dto.MenuTree, err error) {
+func (model *AdminRoleModel) GetAdminRoleMenu(roleId int64) (res []*types.LoginRoleMenuItem, err error) {
 	res, err = model.getAdminRoleMenuByCache(roleId)
 	if err != nil {
 		return nil, err
@@ -50,7 +52,6 @@ func (model *AdminRoleModel) GetAdminRoleMenu(roleId int64) (res map[int64]*dto.
 		return
 	}
 
-	res = make(map[int64]*dto.MenuTree)
 	permissionIds, err := model.RoleModel.GetRolePermissionById(roleId)
 	if err != nil {
 		return nil, err
@@ -68,7 +69,7 @@ func (model *AdminRoleModel) GetAdminRoleMenu(roleId int64) (res map[int64]*dto.
 		return
 	}
 
-	menuInfo, err := model.MenuModel.GetMenuTreeByIds(menuIds)
+	menuInfo, err := model.MenuModel.GetMenuByIds(menuIds)
 	if err != nil {
 		return nil, err
 	}
@@ -77,7 +78,35 @@ func (model *AdminRoleModel) GetAdminRoleMenu(roleId int64) (res map[int64]*dto.
 		return
 	}
 
-	model.setAdminRoleMenuByCache(roleId, menuInfo)
+	menuTree := model.buildMenuTree(menuInfo)
+	model.setAdminRoleMenuByCache(roleId, menuTree)
 
-	return menuInfo, nil
+	return menuTree, nil
+}
+
+func (model *AdminRoleModel) buildMenuTree(menus []*schema.Menu) []*types.LoginRoleMenuItem {
+	MenuTree := make(map[int64]*types.LoginRoleMenuItem)
+	MenuTreeTemp := make([]*types.LoginRoleMenuItem, 0)
+	var tree []*types.LoginRoleMenuItem
+	if len(menus) == 0 {
+		return tree
+	}
+
+	for _, v := range menus {
+		menuTree := &types.LoginRoleMenuItem{}
+		copier.Copy(menuTree, v)
+		MenuTree[v.ID] = menuTree
+		MenuTreeTemp = append(MenuTreeTemp, menuTree)
+	}
+
+	for _, menu := range MenuTreeTemp {
+		if menu.MenuPid == 0 {
+			tree = append(tree, menu)
+		} else {
+			if parent, exists := MenuTree[menu.MenuPid]; exists {
+				parent.Children = append(parent.Children, menu)
+			}
+		}
+	}
+	return tree
 }
